--- a/nginx.yml
+++ b/nginx.yml
@@ -21,8 +21,8 @@
 
     - name: NGINX | Create NGINX config file from template
       template:
-        src: templates/nginx_main.conf.j2
-        dest: /tmp/nginx.conf
+        src: templates/nginx.conf.j2
+        dest: /etc/nginx/sites-available/default
       notify:
         - reload nginx
       tags:
