--- a/nginx.yml
+++ b/nginx.yml
@@ -22,7 +22,7 @@
     - name: NGINX | Create NGINX config file from template
       template:
         src: templates/nginx.conf.j2
-        dest: /etc/nginx/sites-available/default
+        dest: /etc/nginx/nginx.conf
       notify:
         - reload nginx
       tags:
